fixed right container overflowing height

--- a/_css/cardsContainer.css
+++ b/_css/cardsContainer.css
@@ -36,5 +36,6 @@ body {
 
 #holidays-card {
     margin-bottom: var(--margin);
+    overflow: hidden;
     /* height: 50%; */
 }
