--- a/_css/weatherCard.css
+++ b/_css/weatherCard.css
@@ -17,7 +17,7 @@
 }
 
 .forecast {
-    margin-bottom: 25px;
+    margin-bottom: 15px;
 }
 
 
